<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_menu_products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@drawable/ic_menu_locations"
            android:title="@string/menu_locations" />
        <item
            android:id="@+id/nav_promotions"
            android:icon="@drawable/ic_menu_promotions"
            android:title="@string/menu_promotions" />
        <item
            android:id="@+id/nav_reserves"
            android:icon="@drawable/ic_menu_reserves"
            android:title="@string/menu_reserves" />

        <item
            android:id="@+id/nav_database"
            android:icon="@drawable/ic_menu_database"
            android:title="@string/menu_database" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>