<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="107dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/principal"
                tools:srcCompat="@drawable/principal" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/menu_home"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                android:background="#80000000"
                android:padding="8dp" />
        </FrameLayout>
        <!-- insertar elmentos de fragmento-->
    <TextView
        android:id="@+id/textwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="28sp"/> <!-- Tamaño del texto -->

    <LinearLayout
        android:id="@+id/layoutwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/box"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textStyle="bold"
            android:text="@string/welcomedescription"/>
    </LinearLayout>
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_hours"
            android:textSize="28sp"/> <!-- Tamaño del texto -->

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/box"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- Primera fila: encabezados -->
                <TableRow>

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color2"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="Lunes a Viernes"
                        android:textStyle="bold"
                        android:textColor="@color/color4"/>

                    <TextView
                        android:layout_width="153dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/color2"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="Sábados"
                        android:textStyle="bold"
                        android:textColor="@color/color4"/>
                </TableRow>

                <!-- Segunda fila: horarios -->
                <TableRow>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:text="8:00 - 10:00"
                        android:gravity="center" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:textStyle="bold"
                        android:text="8:00 - 10:00"
                        android:gravity="center"/>
                </TableRow>

            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>